Native/Test/KL/error-boolean-or-lvalue.out
error-boolean-or-lvalue.kl:10:3: error: no definition found for function foo(Integer)
